--- a/pre-challenge/pre-challenge-3-1/src/main.css
+++ b/pre-challenge/pre-challenge-3-1/src/main.css
@@ -1,6 +1,4 @@
-#container {
-  background-color: #242424;
-  height: 100vh;
+#root {
   display: flex;
   width: 100%;
   justify-content: center;
@@ -8,7 +6,7 @@
   font-size: 30px;
 }
 
-#container > div {
+#root > div {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -18,7 +16,7 @@
   font-weight: 600;
 }
 
-#container > div > button {
+#root > div > button {
   font-size: 18px;
   margin: 30px;
 }
